packages/typ/tests/fixtures/diagnostics/0640_functor_call_abstract_function_int_09.ml.infer.expected
File "0640_functor_call_abstract_function_int_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0640_functor_call_abstract_function_int_09 is not a valid module name.

File "0640_functor_call_abstract_function_int_09.ml", line 7, characters 15-16:
7 |   let y = X.id 8
                   ^
Error: The constant 8 has type int but an expression was expected of type X.t
